--- a/styleguide/scss/module/_code.scss
+++ b/styleguide/scss/module/_code.scss
@@ -12,7 +12,7 @@
   margin-top: 40px;
 
   &.is-preview {
-    max-height: 100px;
+    max-height: 200px;
   }
 
   /*
